--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -29,7 +29,7 @@ keystore/release_user=""
 keystore/release_password=""
 one_click_deploy/clear_previous_install=false
 version/code=1
-version/name="1.0"
+version/name="0.1.0"
 package/unique_name="org.godotengine.$genname"
 package/name=""
 package/signed=true
@@ -217,7 +217,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
@@ -242,7 +242,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
@@ -264,3 +264,38 @@ application/product_name=""
 application/file_description=""
 application/copyright=""
 application/trademarks=""
+
+[preset.3]
+
+name="HTML5"
+platform="HTML5"
+runnable=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../../../Downloads/apk/index.html"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.3.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/export_type=0
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/export_icon=true
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
+html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=false
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144=""
+progressive_web_app/icon_180x180=""
+progressive_web_app/icon_512x512=""
+progressive_web_app/background_color=Color( 0, 0, 0, 1 )
