--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -238,7 +238,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/apk/windows.exe"
+export_path="../../../Downloads/apk/Iso.exe"
 script_export_mode=1
 script_encryption_key=""
 
