--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,26 +12,27 @@ dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
-dock_3="Scene,Import"
 dock_3_selected_tab_idx=0
-dock_4="FileSystem"
 dock_4_selected_tab_idx=0
-dock_5="Inspector,Node,History"
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/Block.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/")
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/Level.tscn")
 current_scene="res://scenes/Level.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=0
+center_split_offset=-286
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
