Fix player position not updating

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -41,6 +41,7 @@ CPUParticles3D:scale=true
 EditorDebuggerRemoteObject:scale=true
 StandardMaterial3D:uv1_scale=true
 StandardMaterial3D:uv2_scale=true
+Label:scale=true
 
 [script_setup]
 
