--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://materials/emission.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/platforms/Long.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/platforms/", "res://materials/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -30,9 +30,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/Level.tscn")
 current_scene="res://scenes/Level.tscn"
 center_split_offset=-286
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=1
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
