Fix score increase animation

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -31,7 +31,7 @@ show_scripts_panel=true
 
 [color_picker]
 
-recent_presets=PackedColorArray(0, 0, 0, 0, 0.266667, 1, 1, 1)
+recent_presets=PackedColorArray(0, 0, 0, 0, 0.266667, 1, 1, 1, 0, 0.878431, 0.878431, 1, 0, 0, 0, 1)
 
 [linked_properties]
 
@@ -44,6 +44,9 @@ StandardMaterial3D:uv1_scale=true
 StandardMaterial3D:uv2_scale=true
 Label:scale=true
 ColorRect:scale=true
+NinePatchRect:scale=true
+Control:scale=true
+TextureButton:scale=true
 
 [script_setup]
 
