--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -14,7 +14,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -27,12 +27,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/Level.tscn", "res://scenes/platforms/TwoWay.tscn", "res://scenes/platforms/Long.tscn", "res://scenes/platforms/Cross.tscn", "res://scenes/platforms/Corner.tscn")
+open_scenes=PackedStringArray("res://scenes/Level.tscn")
 current_scene="res://scenes/Level.tscn"
 center_split_offset=-286
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
