--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -14,13 +14,13 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://assets/textures/Arrow2.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/platforms/", "res://materials/", "res://enviroments/", "res://assets/", "res://assets/textures/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/platforms/Start.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/platforms/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,9 +30,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/Level.tscn")
 current_scene="res://scenes/Level.tscn"
 center_split_offset=-286
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
