--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/platforms/Cross.tscn")
+dock_filesystem_selected_paths=PackedStringArray()
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/platforms/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,7 +31,7 @@ open_scenes=PackedStringArray("res://scenes/Level.tscn")
 current_scene="res://scenes/Level.tscn"
 center_split_offset=-286
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
