--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -53,7 +53,7 @@ selected_shader=""
 log_filter_0=true
 log_filter_2=true
 log_filter_1=true
-log_filter_3=true
+log_filter_3=false
 log_filter_4=false
 collapse=false
 show_search=true
