--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -17,9 +17,11 @@ scripts=["Node", "res://scripts/Player.gd", "res://scripts/Level.gd"]
 
 [dialog_bounds]
 
-project_settings=Rect2(510, 264, 900, 700)
-editor_settings=Rect2(537, 264, 900, 700)
+project_settings=Rect2(2391, 215, 900, 700)
+editor_settings=Rect2(2574, 201, 900, 700)
 create_new_node=Rect2(2430, 190, 900, 700)
+export=Rect2(459, 231, 900, 729)
+search_help=Rect2(480, 270, 960, 540)
 
 [project_settings]
 
@@ -51,3 +53,7 @@ TextureButton:scale=true
 [script_setup]
 
 last_selected_language="GDScript"
+
+[export_options]
+
+default_filename="release"
