--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,45 +3,40 @@
 name="Android"
 platform="Android"
 runnable=false
+dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/apk/debug.apk"
-script_export_mode=1
-script_encryption_key=""
+export_path="./release.apk"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
-custom_template/use_custom_build=false
-custom_template/export_format=0
+gradle_build/use_gradle_build=true
+gradle_build/export_format=0
+gradle_build/min_sdk=""
+gradle_build/target_sdk=""
 architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
-architectures/x86=false
-architectures/x86_64=false
-keystore/debug=""
-keystore/debug_user=""
-keystore/debug_password=""
-keystore/release=""
-keystore/release_user=""
-keystore/release_password=""
-one_click_deploy/clear_previous_install=false
-version/code=1
-version/name="0.1.0"
-version/min_sdk=19
-version/target_sdk=30
-package/unique_name="org.godotengine.$genname"
+architectures/x86=true
+architectures/x86_64=true
+version/code=2
+version/name="2.0.0"
+package/unique_name="com.mlukawski.iso"
 package/name=""
 package/signed=true
-package/classify_as_game=true
+package/app_category=2
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
-graphics/32_bits_framebuffer=true
 graphics/opengl_debug=false
 xr_features/xr_mode=0
 xr_features/hand_tracking=0
@@ -57,7 +52,7 @@ command_line/extra_args=""
 apk_expansion/enable=false
 apk_expansion/SALT=""
 apk_expansion/public_key=""
-permissions/custom_permissions=PoolStringArray(  )
+permissions/custom_permissions=PackedStringArray()
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
@@ -130,6 +125,7 @@ permissions/location_hardware=false
 permissions/manage_accounts=false
 permissions/manage_app_tokens=false
 permissions/manage_documents=false
+permissions/manage_external_storage=false
 permissions/master_clear=false
 permissions/media_content_control=false
 permissions/modify_audio_settings=false
@@ -209,98 +205,37 @@ permissions/write_user_dictionary=false
 name="Linux/X11"
 platform="Linux/X11"
 runnable=false
+dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../../../Downloads/apk/linux.x86_64"
-script_export_mode=1
-script_encryption_key=""
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
 
 [preset.1.options]
 
 custom_template/debug=""
 custom_template/release=""
-binary_format/64_bits=true
+debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
-texture_format/no_bptc_fallbacks=true
-
-[preset.2]
-
-name="Windows Desktop"
-platform="Windows Desktop"
-runnable=false
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="../../../Downloads/apk/Iso.exe"
-script_export_mode=1
-script_encryption_key=""
-
-[preset.2.options]
-
-custom_template/debug=""
-custom_template/release=""
-binary_format/64_bits=true
-binary_format/embed_pck=true
-texture_format/bptc=false
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-texture_format/no_bptc_fallbacks=true
-codesign/enable=false
-codesign/identity=""
-codesign/password=""
-codesign/timestamp=true
-codesign/timestamp_server_url=""
-codesign/digest_algorithm=1
-codesign/description=""
-codesign/custom_options=PoolStringArray(  )
-application/icon="res://assets/textures/icon.ico"
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
-application/trademarks=""
-
-[preset.3]
-
-name="HTML5"
-platform="HTML5"
-runnable=false
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="../../../Downloads/apk/web/index.html"
-script_export_mode=1
-script_encryption_key=""
-
-[preset.3.options]
-
-custom_template/debug=""
-custom_template/release=""
-variant/export_type=0
-vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
-html/export_icon=true
-html/custom_html_shell=""
-html/head_include=""
-html/canvas_resize_policy=2
-html/focus_canvas_on_start=true
-html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
-progressive_web_app/offline_page=""
-progressive_web_app/display=1
-progressive_web_app/orientation=0
-progressive_web_app/icon_144x144=""
-progressive_web_app/icon_180x180=""
-progressive_web_app/icon_512x512=""
-progressive_web_app/background_color=Color( 0, 0, 0, 1 )
+binary_format/architecture="x86_64"
+ssh_remote_deploy/enabled=false
+ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/port="22"
+ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/run_script="#!/usr/bin/env bash
+export DISPLAY=:0
+unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
+\"{temp_dir}/{exe_name}\" {cmd_args}"
+ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
+kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
+rm -rf \"{temp_dir}\""
