--- a/.godot/export_credentials.cfg
+++ b/.godot/export_credentials.cfg
@@ -7,9 +7,9 @@ script_encryption_key=""
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
-keystore/release="/home/lukawski/.apk-keys/iso.jks"
-keystore/release_user="upload"
-keystore/release_password="Omnitrix1"
+keystore/release=""
+keystore/release_user=""
+keystore/release_password=""
 
 [preset.1]
 
