Add background music

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/audio/loop.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scripts/", "res://assets/", "res://assets/audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -53,7 +53,7 @@ selected_shader=""
 log_filter_0=true
 log_filter_2=true
 log_filter_1=true
-log_filter_3=false
-log_filter_4=false
+log_filter_3=true
+log_filter_4=true
 collapse=false
 show_search=true
